<resources>
    <string name="app_name">CrowdFly</string>
    <string name="title_activity_view_trial_log">ViewTrialLogActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="trialfilter"><b>Minimum Number of Trials Filter</b></string>
    <string name="activefilter"><b>Active Filter</b></string>
    <string name="regionfilter"><b>Region Filter</b></string>
    <string name="publish"><b>Published</b></string>
    <string name="username"><b>User ID: </b></string>
    <string name="date"><b>Date: </b></string>
    <string name="asker"><b>Asker: </b></string>
    <string name="question"><b>Q: </b></string>
    <string name="published"><b>Published: </b></string>
    <string name="comment"><b>C: </b></string>
    <string name="replies"><b>Replies: </b></string>
    <string name="description"><b>Description: </b></string>
    <string name="numTrials"><b>Min Trials: </b></string>
    <string name="region"><b>Region: </b></string>
    <string name="owner"><b>Owner: </b></string>
    <string name="status"><b>Status: </b></string>
    <string name="hello_world">Hello Square World!</string>
    <string name="accessReplies"><u>Link to all replies</u></string>
    <string name="signup_prompt">New user? Click me!</string>
    <string name="welcome"><b>Welcome to CrowdFly</b></string>
    <string name="login">Setup</string>
    <string name="ID">ID</string>
    <string name="Contact">Contact Information:</string>
    <string name="Done">DONE</string>
    <string name="pickLocation">"Tap to Select a Location…"</string>
    <string name="generating">Generating...</string>
    <string name="authButtonSubtitleLoading">Please wait while we generate a new anonymous ID</string>
    <string name="generate">Generate</string>
    <string name="authButtonSubtitle">Generate a new anonymous ID</string>
    <string name="subscribe">Subscribe</string>
    <string name="UserSearch">User Search</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="title_activity_search_user">searchUserActivity</string>
    <string name="scanner_menu">Scanner Menu</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="scan_qr_code_or_barcode">Scan QR Code or Barcode</string>
    <string name="register_barcode">Register Barcode</string>
    <string name="binomial">binomial</string>
    <string name="count">count</string>
    <string name="measurement">measurement</string>
    <string name="generatedSuccess">Generated successfully</string>
    <string name="regionButton">Add Region...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
</resources>