<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_experiment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_experiment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/bluejay"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/menu" />


            <TextView
                android:id="@+id/experiment_log_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/nexa_bold"
                android:text="Experiment Log"
                android:textColor="#040303"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolbar_experiment" />

            <ListView
                android:id="@+id/experiment_list"
                android:layout_width="373dp"
                android:layout_height="343dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/experiment_log_text" />


            <Button
                android:id="@+id/experimentAdd"
                android:layout_width="247dp"
                android:layout_height="45dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/bluejay"
                android:text="Add experiment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/experiment_list" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="530dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/experimentAdd">


                <ViewSwitcher
                    android:id="@+id/viewSwitcher"
                    android:layout_width="247dp"
                    android:layout_height="0dp"
                    android:backgroundTint="@color/bluejay"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/experimentSearchButton"
                        android:layout_width="247dp"
                        android:layout_height="46dp"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/bluejay"
                        android:shadowColor="#9A5454"
                        android:text="Search Experiment"
                        app:iconTint="@color/bluejay"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/experimentAdd" />

                    <EditText
                        android:id="@+id/searchExperiment"
                        android:layout_width="247dp"
                        android:layout_height="46dp"
                        android:ems="10"
                        android:hint="Search Experiments..."
                        android:inputType="textPersonName"
                        android:textColor="#0C0C0C"
                        android:textColorHint="#050505"
                        android:textSize="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.493"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/experimentAdd" />


                </ViewSwitcher>

                <Spinner
                    android:id="@+id/activeSpinner"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.478"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/activeFilter" />


                <Spinner
                    android:id="@+id/regionSpinner"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="28dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.478"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/regionFilter" />

                <TextView
                    android:id="@+id/activeFilter"
                    android:layout_width="100dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/activefilter"
                    android:textColor="#050505"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signSpinner" />

                <TextView
                    android:id="@+id/regionFilter"
                    android:layout_width="100dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/regionfilter"
                    android:textColor="#050505"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/activeSpinner" />

                <Spinner
                    android:id="@+id/signSpinner"
                    android:layout_width="87dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintStart_toEndOf="@+id/numTrialsLeft"
                    app:layout_constraintTop_toBottomOf="@+id/trialsFilter" />

                <TextView
                    android:id="@+id/trialsFilter"
                    android:layout_width="205dp"
                    android:layout_height="19dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/trialfilter"
                    android:textColor="#050505"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewSwitcher" />

                <EditText
                    android:id="@+id/numTrialsRight"
                    android:layout_width="68dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="12dp"
                    android:ems="10"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/signSpinner"
                    app:layout_constraintTop_toTopOf="@+id/signSpinner" />

                <EditText
                    android:id="@+id/numTrialsLeft"
                    android:layout_width="68dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:inputType="number"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/trialsFilter" />

                <Button
                    android:id="@+id/buttonDoneLog"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="70dp"
                    android:backgroundTint="@color/bluejay"
                    android:text="Done"
                    android:textSize="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_experiment"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_drawer_menu"
        android:layout_gravity="start" />



</androidx.drawerlayout.widget.DrawerLayout>
